# edu-spiders

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: ci.yml
courses/: items.py  pipelines.py  settings.py
courses/spiders/: bhcc.py  bu.py  emerson.py  harvard_extension.py  suffolk.py  umb.py
data/: bhcc.mass.edu.csv  bu.edu.csv  extension.harvard.edu.csv  suffolk.edu.csv  umb.edu.csv
tests/: conftest.py  test_cli.py  test_pipeline.py  test_settings.py  test_spiders.py
tests/fixtures/: bhcc.html  bhcc_missing_credits.html  bu.html  emerson.html  harvard.html  harvard_missing_credits.html  suffolk.html  umb.html  umb_incomplete.html  umb_missing_breadcrumb.html
