[project]
name = "edu-spiders"
version = "0.1.0"
description = "Scrapy spiders for crawling course information from educational institutes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "Scrapy>=2.16,<3",
    "elasticsearch>=9,<10",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long XPath expressions and the user-agent string are unavoidably long.
ignore = ["E501"]
