[project]
name = "edu-spiders"
version = "0.1.0"
description = "Scrapy spiders for crawling course information from educational institutes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rangertaha", email = "rangertaha@gmail.com" }]
keywords = ["scrapy", "crawler", "spider", "education", "courses", "elasticsearch"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Scrapy",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "Scrapy>=2.17,<3",
    "elasticsearch>=9.4,<10",
]

[project.urls]
Homepage = "https://github.com/rangertaha/edu-spiders"
Repository = "https://github.com/rangertaha/edu-spiders"
Issues = "https://github.com/rangertaha/edu-spiders/issues"
Changelog = "https://github.com/rangertaha/edu-spiders/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "mypy>=1.14",
    "ruff>=0.9",
]

# This is a Scrapy application (scrapy.cfg layout), not an installable package.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long XPath expressions and the user-agent string are unavoidably long.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
source = ["courses"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
files = ["courses", "tests"]
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# Scrapy does not ship complete type information for all submodules.
module = ["scrapy.*"]
ignore_missing_imports = true
